<resources>

    <string name="app_name">TastyFoods</string>
    <string name="dashboard">Dashboard</string>
    <string name="favourites">favourites</string>
    <string name="profile">profile</string>
    <string name="order_history">order history</string>
    <string name="sign_out">sign out</string>
    <string name="faq">FAQ</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="favourites_fragment">Favourites Fragment</string>
    <string name="name_of_the_restaurant">Name of the Restaurant</string>
    <string name="name_of_the_dish">Name of the dish</string>

</resources>