<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
    <item
        android:id="@+id/dashboard"
        android:title="@string/dashboard"
        android:icon="@drawable/ic_dashboard"/>

    <item
        android:id="@+id/favourites"
        android:title="@string/favourites"
        android:icon="@drawable/ic_favourites"/>

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"/>

    <item
        android:id="@+id/orderHistory"
        android:title="@string/order_history"
        android:icon="@drawable/ic_order_history"/>

    <item
        android:id="@+id/signOut"
        android:title="@string/sign_out"
        android:icon="@drawable/ic_logout"/>\

    <item
        android:id="@+id/faq"
        android:title="@string/faq"
        android:icon="@drawable/ic_faq"/>
    </group>
</menu>